# roast-my-docs

./: .env.example  README.md  pyproject.toml
data/: 20240921_153220_extracted_urls.jsonl  20240921_153346_extracted_urls.jsonl  typer.md
src/rmd/: main.py
src/rmd/core/: config.py  file_handler.py  log.py
src/rmd/utils/: links.py  openrouter.py  prompts.py  scrape_urls.py  url_to_md.py
