[project]
name = "roast-my-docs"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "william-cass-wright", email = "william.cass.wright@gmail.com" }
]
dependencies = [
    "openai>=1.47.0",
    "weave>=0.51.8",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rmd"]

[tool.rye.scripts]
start = "python src/rmd/main.py"
